<resources>
    <string name="app_name">YAWA</string>

    <string name="title_activity_weather">WeatherActivity</string>
    <string name="about_us">About Us</string>
    <string name="get_weather">Get Weather</string>
    <string name="ex_london_gb">ex: London</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="AboutUsText">Our application consists in providing a simple way to view weather according to user location specification using the open weather API.\n
The user just needs to specify the name of the city he wants to get his weather information and the  corresponding country acronym (ex: "Lisbon, PT").\n
Android application created by José Soares, Tiago Oliveira and Tiago Cruz.\n
Course: PDM\n
Teacher: João Trindade</string>
    <string name="title_activity_about">About us</string>
    <string name="title_activity_main2">Favorites</string>
    <string name="title_activity_preferences">Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_weather_list">WeatherListActivity</string>
    <string name="local_service_started">Service Started</string>
    <string name="local_service_stopped">Service Stopped</string>
    <string name="local_service_label">Syncing Service</string>
    <string name="title_activity_weather_by_location">WeatherByLocation</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="action_favorite">Favorites</string>
    <string name="selectCountry">Select Country</string>
    <string name="positiveButton">OK</string>
    <string name="Addpref">Add Location</string>
    <string name="add_location">Add Location</string>
    <string name="removePref">Remove Location</string>
    <string name="remove_location">Remove Location</string>
    <string name="search">Search</string>
    <string name="Update_wifi_only">Update with Wi-Fi only</string>
    <string name="Periodicity">Periodicity (minutes)</string>
    <string name="min_battery">Minimum Battery</string>
    <string name="Apply_button">Apply</string>
    <string name="settings">Settings</string>
    <string name="action_toggleFavorite">Add/Remove Favorite</string>
    <string name="description">Description</string>

</resources>
