<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.workstation.pdm_se01.activities.WeatherByLocation">
    <item
        android:id="@+id/toggleFavorite"
        android:icon="@android:drawable/star_big_off"
        android:title="@string/action_toggleFavorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        app:showAsAction="never" />
</menu>
